[tool.poetry]
name = "spec2json"
version = "0.1.0"
description = "Extract section metadata and algorithm steps from specification HTML documents as JSON."
authors = ["Linus Groh <mail@linusgroh.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/linusg/spec2json"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
click = "^8.1.3"
html5lib = "^1.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"
types-beautifulsoup4 = "^4.11.6.5"

[tool.poetry.scripts]
spec2json = "spec2json.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
