[tool.poetry]
name = "spec2json"
version = "0.1.0"
description = "Extract section metadata and algorithm steps from specification HTML documents as JSON."
authors = ["Linus Groh <mail@linusgroh.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/linusg/spec2json"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
html5lib = "^1.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
types-beautifulsoup4 = "^4.12.0.20240511"

[tool.poetry.scripts]
spec2json = "spec2json.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_tests = "tests"
sections=[
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "TESTS",
    "LOCALFOLDER"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
